First edit to Index.html for Lab2

--- a/index.html
+++ b/index.html
@@ -4,8 +4,18 @@
         <title>Tristan Geary</title>
     </head>
     <body>
-        <h1>Larger Header</h1>
-        <h4>SMALL HEADER</h4>
+		<h1><b>Tristan Geary</b>: Undergraduate Student</h1>
+        <h2>Major: Neuroscience</h2>
+		
+		<h2>Minor: Computer Science </h2>
+		
+		<p>I was originally a biology and business student, but <br> switched
+		because it didn't align with my goals<br>
+        
+		<h3><em>Career Goals:</em></h3>
+		<p>I hope to go to <strong> medical school </strong> and become a <br> <b>doctor</b>.
+		I am currently<br> applying to medical schools this semester.</p>
+		
         <p>one paragraph for CS203 - Tristan Geary.</p>
     </body>
 </html>
