updating career goals section

--- a/index.html
+++ b/index.html
@@ -5,17 +5,30 @@
     </head>
     <body>
 		<h1><b>Tristan Geary</b>: Undergraduate Student</h1>
+		
+		<hr>
+		
         <h2>Major: Neuroscience</h2>
 		
 		<h2>Minor: Computer Science </h2>
 		
-		<p>I was originally a biology and business student, but <br> switched
+		<hr>
+		
+		<p>Fun Fact:I was originally a biology and business student, but <br> switched
 		because it didn't align with my goals<br>
+		
+		<hr>
         
 		<h3><em>Career Goals:</em></h3>
-		<p>I hope to go to <strong> medical school </strong> and become a <br> <b>doctor</b>.
-		I am currently<br> applying to medical schools this semester.</p>
+		<ul>
+		<li><p>I hope to go to <strong> medical school </strong> and become a <br> <b>doctor</b>
+		(I am currently applying to medical schools this semester).</p>
+		<li><p>I hope to do a lot of medically-related research.</p>
+		<li><p>Currently, I want to become a <b>surgeon</b>.</p>
+		</ul>
 		
-        <p>one paragraph for CS203 - Tristan Geary.</p>
+		<hr>
+		
+        
     </body>
 </html>
