--- a/index.html
+++ b/index.html
@@ -22,13 +22,40 @@
 		<h3><em>Career Goals:</em></h3>
 		<ul>
 		<li><p>I hope to go to <strong> medical school </strong> and become a <br> <b>doctor</b>
-		(I am currently applying to medical schools this semester).</p>
-		<li><p>I hope to do a lot of medically-related research.</p>
-		<li><p>Currently, I want to become a <b>surgeon</b>.</p>
+		(I am currently applying to medical schools this semester).</p></li>
+		<li><p>I hope to do a lot of medically-related research.</p></li>
+		<li><p>Currently, I want to become a <b>surgeon</b>.</p></li>
 		</ul>
 		
 		<hr>
 		
-        
+        <table border="1", style = "width:50%">
+		
+			<tr>
+				<th>School</th>
+				<th>Favorite Class</th>
+				<th>Year Graduated</th>
+			</tr>
+			
+			<tr>
+				<td>Norwin Middle School</td>
+				<td>Algera 1</td>
+				<td>2018</td>
+			</tr>
+			
+			<tr>
+				<td>Penn-Trafford High School</td>
+				<td>Anatomy &amp Physiology</td>
+				<td>2022</td>
+			</tr>
+		
+			<tr>
+				<td>Bishop's University</td>
+				<td>Brain &amp Behavior II</td>
+				<td>2026</td>
+			</tr>
+			
+			
+		</table>
     </body>
 </html>
