finished part 1 of lab2

--- a/index.html
+++ b/index.html
@@ -2,6 +2,13 @@
 <html>
     <head>
         <title>Tristan Geary</title>
+		
+		<meta name= "author" content = "Tristan Geary">
+		<meta name= "description" content = "Lab2 webpage assignment">
+		<meta charset= "UTF-8">
+		<meta name="keywords" content= "html">
+		
+		
     </head>
     <body>
 		<h1><b>Tristan Geary</b>: Undergraduate Student</h1>
