added and finished my dream vacation website + link

--- a/index.html
+++ b/index.html
@@ -7,11 +7,13 @@
 		<meta name= "description" content = "Lab2 webpage assignment">
 		<meta charset= "UTF-8">
 		<meta name="keywords" content= "html">
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
+
 		
 		
     </head>
     <body>
-		<h1><b>Tristan Geary</b>: Undergraduate Student</h1>
+		<h1><b>Tristan Geary: Undergraduate Student</h1>
 		
 		<hr>
 		
@@ -28,10 +30,10 @@
         
 		<h3><em>Career Goals:</em></h3>
 		<ul>
-		<li><p>I hope to go to <strong> medical school </strong> and become a <br> <b>doctor</b>
+		<li><p>I hope to go to <strong> medical school </strong> and become a <br> <b>doctor
 		(I am currently applying to medical schools this semester).</p></li>
 		<li><p>I hope to do a lot of medically-related research.</p></li>
-		<li><p>Currently, I want to become a <b>surgeon</b>.</p></li>
+		<li><p>Currently, I want to become a <b>surgeon.</p></li>
 		</ul>
 		
 		<hr>
@@ -64,5 +66,7 @@
 			
 			
 		</table>
+		
+		<p><em><b>My Dream Vacation: </b></em></p><a href="my_vacation.html">My Dream Vacation</a>
     </body>
 </html>
