updating image location from link to file in folder

--- a/my_vacation.html
+++ b/my_vacation.html
@@ -21,8 +21,7 @@
 	<p><b> My ideal vacation is in Tampa, Florida</p>
 	
 	
-	<p><img src="https://th.bing.com/th/id/OIP.E-YplEYn6HuvXRr8VAwnlAHaE8?w=256&h=180&c=7&r=0&o=7&dpr=1.1&pid=1.7&rm=3"
-	alt ="Tampa Beach">
+	<p><img src="images/tampa_beach.jpg" alt ="Tampa Beach"></p>
 	</body>
 
 
