added comments onto both webpages

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <head>
         <title>Tristan Geary</title>
 		
+		<!-- Metadata -->
 		<meta name= "author" content = "Tristan Geary">
 		<meta name= "description" content = "Lab2 webpage assignment">
 		<meta charset= "UTF-8">
@@ -12,9 +13,13 @@
 		
 		
     </head>
+	
     <body>
+		
+		<!-- academic information as headers -->
 		<h1><b>Tristan Geary: Undergraduate Student</h1>
 		
+		<!-- horizontal ruler -->
 		<hr>
 		
         <h2>Major: Neuroscience</h2>
@@ -23,12 +28,16 @@
 		
 		<hr>
 		
+		<!-- fun fact -->
 		<p>Fun Fact:I was originally a biology and business student, but <br> switched
 		because it didn't align with my goals<br>
 		
 		<hr>
         
+		<!-- career goals section -->
 		<h3><em>Career Goals:</em></h3>
+		
+		<!-- unordered list -->
 		<ul>
 		<li><p>I hope to go to <strong> medical school </strong> and become a <br> <b>doctor
 		(I am currently applying to medical schools this semester).</p></li>
@@ -38,6 +47,7 @@
 		
 		<hr>
 		
+		<!-- table detailing schools attended, favorite classes, and year graduated -->
         <table border="1", style = "width:50%">
 		
 			<tr>
@@ -67,6 +77,10 @@
 			
 		</table>
 		
+		
+		<!--Link to dream vacation website -->
 		<p><em><b>My Dream Vacation: </b></em></p><a href="my_vacation.html">My Dream Vacation</a>
+		
     </body>
+	
 </html>
