--- a/my_vacation.html
+++ b/my_vacation.html
@@ -5,6 +5,7 @@
 	
 		<title>My Vacation</title>
 	
+		<!-- metadata -->
 		<meta name = "author" content = "Tristan Geary">
 		<meta name = "Description" content = "My ideal Vacation Spot">
 		<meta name = "keywords" content = "html">
@@ -16,11 +17,12 @@
 	
 	<body>
 	
+	<!-- header and info -->
 	<h1>My Ideal Vacation</h1>
 	
 	<p><b> My ideal vacation is in Tampa, Florida</p>
 	
-	
+	<!-- picture of Tampa, Florida -->
 	<p><img src="images/tampa_beach.jpg" alt ="Tampa Beach"></p>
 	</body>
 
