Creating div sections, and adding titel for table

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     <body>
 		
 		<!-- academic information as headers -->
+		<div>
 		<h1><b>Tristan Geary: Undergraduate Student</h1>
 		
 		<!-- horizontal ruler -->
@@ -25,16 +26,20 @@
         <h2>Major: Neuroscience</h2>
 		
 		<h2>Minor: Computer Science </h2>
+		</div>
 		
 		<hr>
 		
+		<div>
 		<!-- fun fact -->
 		<p>Fun Fact:I was originally a biology and business student, but <br> switched
 		because it didn't align with my goals<br>
+		<div/>
 		
 		<hr>
         
 		<!-- career goals section -->
+		<div>
 		<h3><em>Career Goals:</em></h3>
 		
 		<!-- unordered list -->
@@ -45,9 +50,12 @@
 		<li><p>Currently, I want to become a <b>surgeon.</p></li>
 		</ul>
 		
+		</div>
 		<hr>
 		
 		<!-- table detailing schools attended, favorite classes, and year graduated -->
+		<div>
+		<h2>Schools attended, favorite class, and year graduated:</div>
         <table border="1", style = "width:50%">
 		
 			<tr>
@@ -77,9 +85,12 @@
 			
 		</table>
 		
+		</div>
 		
 		<!--Link to dream vacation website -->
+		<div>
 		<p><em><b>My Dream Vacation: </b></em></p><a href="my_vacation.html">My Dream Vacation</a>
+		</div>
 		
     </body>
 	
