--- a/my_vacation.html
+++ b/my_vacation.html
@@ -6,10 +6,10 @@
 		<title>My Vacation</title>
 	
 		<!-- metadata -->
-		<meta name = "author" content = "Tristan Geary">
-		<meta name = "Description" content = "My ideal Vacation Spot">
-		<meta name = "keywords" content = "html">
-		<meta charset = "UTF-8">
+		<meta name="author" content="Tristan Geary">
+		<meta name="Description" content="My ideal Vacation Spot">
+		<meta name="keywords" content="html">
+		<meta charset="UTF-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 	
@@ -18,19 +18,28 @@
 	<body>
 	
 	<!-- header and info -->
+	
+	<div>
 	<h1>My Ideal Vacation</h1>
 	
 	<p><b> My ideal vacation is in Tampa, Florida</p>
 	
 	<!-- picture of Tampa, Florida -->
 	<p><img src="images/tampa_beach.jpg" alt ="Tampa Beach"></p>
+	
+	
+	</div>
+
+
+	<!-- Link back to main website -->
+	<div>
+	
+	<p>Link back to main website:</p><a href="index.html">Tristan Geary</a>
+	
+	</div>
+
+
 	</body>
-
-
-
-
-
-
 
 
 
