--- a/index.html
+++ b/index.html
@@ -4,12 +4,20 @@
         <title>Tristan Geary</title>
 		
 		<!-- Metadata -->
-		<meta name= "author" content = "Tristan Geary">
-		<meta name= "description" content = "Lab2 webpage assignment">
-		<meta charset= "UTF-8">
-		<meta name="keywords" content= "html">
+		<meta name="author" content="Tristan Geary">
+		<meta name="description" content="Lab2 webpage assignment">
+		<meta charset="UTF-8">
+		<meta name="keywords" content="html">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
+		
+		<!-- defining style for table -->
+		<style>
+			table, 
+			th, 
+			td{border: 1px solid black; 
+			}
+		</style>
 		
 		
     </head>
@@ -18,7 +26,7 @@
 		
 		<!-- academic information as headers -->
 		<div>
-		<h1><b>Tristan Geary: Undergraduate Student</h1>
+		<h1><b>Tristan Geary: Undergraduate Student</b></h1>
 		
 		<!-- horizontal ruler -->
 		<hr>
@@ -33,8 +41,8 @@
 		<div>
 		<!-- fun fact -->
 		<p>Fun Fact:I was originally a biology and business student, but <br> switched
-		because it didn't align with my goals<br>
-		<div/>
+		because it didn't align with my goals</p>
+		</div>
 		
 		<hr>
         
@@ -44,10 +52,10 @@
 		
 		<!-- unordered list -->
 		<ul>
-		<li><p>I hope to go to <strong> medical school </strong> and become a <br> <b>doctor
+		<li><p>I hope to go to <strong> medical school </strong> and become a <br> <b>doctor</b>
 		(I am currently applying to medical schools this semester).</p></li>
 		<li><p>I hope to do a lot of medically-related research.</p></li>
-		<li><p>Currently, I want to become a <b>surgeon.</p></li>
+		<li><p>Currently, I want to become a <b>surgeon</b>.</p></li>
 		</ul>
 		
 		</div>
@@ -55,8 +63,10 @@
 		
 		<!-- table detailing schools attended, favorite classes, and year graduated -->
 		<div>
-		<h2>Schools attended, favorite class, and year graduated:</div>
-        <table border="1", style = "width:50%">
+		<h2>Schools attended, favorite class, and year graduated:</h2>
+        <table style="width:50%">
+			
+			
 		
 			<tr>
 				<th>School</th>
