--- a/index.html
+++ b/index.html
@@ -2,10 +2,112 @@
 <html>
     <head>
         <title>Tristan Geary</title>
+		
+		<!-- Metadata -->
+		<meta name="author" content="Tristan Geary">
+		<meta name="description" content="Lab2 webpage assignment">
+		<meta charset="UTF-8">
+		<meta name="keywords" content="html">
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+		
+		<!-- defining style for table -->
+		<style>
+			table, 
+			th, 
+			td{border: 1px solid black; 
+			}
+		</style>
+		
+		
     </head>
+	
     <body>
-        <h1>Larger Header</h1>
-        <h4>SMALL HEADER</h4>
-        <p>one paragraph for CS203 - Tristan Geary.</p>
+		
+		<!-- academic information as headers -->
+		<div>
+		<h1><b>Tristan Geary: Undergraduate Student</b></h1>
+		
+		<!-- horizontal ruler -->
+		<hr>
+		
+        <h2>Major: Neuroscience</h2>
+		
+		<h2>Minor: Computer Science </h2>
+		</div>
+		
+		<hr>
+		
+		<div>
+		<!-- fun fact -->
+		<p>Fun Fact:I was originally a biology and business student, but <br> switched
+		because it didn't align with my goals</p>
+		</div>
+		
+		<hr>
+        
+		<!-- career goals section -->
+		<div>
+		<h3><em>Career Goals:</em></h3>
+		
+		<!-- unordered list -->
+		<ul>
+		<li><p>I hope to go to <strong> medical school </strong> and become a <br> <b>doctor</b>
+		(I am currently applying to medical schools this semester).</p></li>
+		<li><p>I hope to do a lot of medically-related research.</p></li>
+		<li><p>Currently, I want to become a <b>surgeon</b>.</p></li>
+		</ul>
+		
+		</div>
+		<hr>
+		
+		<!-- table detailing schools attended, favorite classes, and year graduated -->
+		<div>
+		<h2>Schools attended, favorite class, and year graduated:</h2>
+        <table style="width:50%; text-align: center;">
+			
+			
+		
+			<tr style="background-color: blue;">
+				<th>School</th>
+				<th>Favorite Class</th>
+				<th>Year Graduated</th>
+			</tr>
+			
+			<tr>
+				<td style="font-family: Fantasy;">Norwin Middle School</td>
+				<td>Algebra 1</td>
+				<td>2018</td>
+			</tr>
+			
+			<tr>
+				<td style="font-family: Fantasy;">Penn-Trafford High School</td>
+				<td>Anatomy &amp Physiology</td>
+				<td>2022</td>
+			</tr>
+		
+			<tr>
+				<td style="font-family: Fantasy;">Bishop's University</td>
+				<td>Brain &amp Behavior II</td>
+				<td>2026</td>
+			</tr>
+			
+			
+		</table>
+		
+		</div>
+		
+		<!--Link to dream vacation website -->
+		<div>
+		<p><em><b>My Dream Vacation: </b></em></p><a href="my_vacation.html">My Dream Vacation</a>
+		</div>
+		
+		
+		<div>
+		<p><em><b>My Artistic Self:</b></em></p>
+		<a href="my_artistic_self.html">My Artistic Self Page</a>
+		</div
+		
     </body>
+	
 </html>
