adding comments/metadata

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 		
 		<!-- Metadata -->
 		<meta name="author" content="Tristan Geary">
-		<meta name="description" content="Lab2 webpage assignment">
+		<meta name="description" content="lab3 assignment index.html page">
 		<meta charset="UTF-8">
 		<meta name="keywords" content="html">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -103,6 +103,7 @@
 		</div>
 		
 		
+		<!--Link to My Artistic self website-->
 		<div>
 		<p><em><b>My Artistic Self:</b></em></p>
 		<a href="my_artistic_self.html">My Artistic Self Page</a>
