--- a/my_vacation.html
+++ b/my_vacation.html
@@ -10,22 +10,40 @@
 		<meta name="Description" content="My ideal Vacation Spot">
 		<meta name="keywords" content="html">
 		<meta charset="UTF-8">
-		<meta name="viewport" content="width=device-width, initial-scale=1.0">
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
+
+		<!--linking external css-->
+		<link rel="stylesheet" href="my_style.css">
 	
 	</head>
 	
 	<body>
+	<div class="body_wrapper">
 	
+	<main class="page-body">
+	
+	
+	<h3>Quick Links</h3>
+	
+	<nav>
+	
+		<a href="index.html">Tristan Geary</a> 
+		<a href="my_vacation.html" class="active">My Vacation</a> 
+		<a href="my_artistic_self.html">My Artistic Self</a>
+		
+	</nav>
+	
+	<br><br><br>
 	<!-- header and info -->
 	
 	<div>
 	<h1>My Ideal Vacation</h1>
 	
-	<p><b> My ideal vacation is in Tampa, Florida</p>
+	<p><b> My ideal vacation is in Tampa, Florida</b></p>
 	
 	<!-- picture of Tampa, Florida -->
-	<p><img src="images/tampa_beach.jpg" alt ="Tampa Beach"></p>
+	<p><img style="border-color: #FF851B; border-style: double; border-width: 10px; border-radius: 50px" src="images/tampa_beach.jpg" alt ="Tampa Beach"></p>
 	
 	
 	</div>
@@ -37,8 +55,17 @@
 	<p>Link back to main website:</p><a href="index.html">Tristan Geary</a>
 	
 	</div>
+	
+	
+	
+	</main>
+	
+	<footer class="site-footer">
+	<p>This is for my CS203 Lab.</p>
+	</footer>
+	
 
-
+	</div>
 	</body>
 
 
