--- a/my_artistic_self.html
+++ b/my_artistic_self.html
@@ -110,6 +110,10 @@
 		<a href="index.html">Tristan Geary</a> 
 		<a href="my_vacation.html">My Vacation</a> 
 		<a href="my_artistic_self.html" class="active">My Artistic Self</a>
+		<a href="marketplace.html">Marketplace</a>
+		<a href="calculators.html">Calculators</a>
+
+
 	</nav>
 	
 	<br><br><br>
