--- a/my_vacation.html
+++ b/my_vacation.html
@@ -31,6 +31,9 @@
 		<a href="index.html">Tristan Geary</a> 
 		<a href="my_vacation.html" class="active">My Vacation</a> 
 		<a href="my_artistic_self.html">My Artistic Self</a>
+		<a href="marketplace.html">Marketplace</a>
+		<a href="calculators.html">Calculators</a>
+
 		
 	</nav>
 	
