--- a/index.html
+++ b/index.html
@@ -40,6 +40,10 @@
 		<a href="index.html" class="active">Tristan Geary</a> 
 		<a href="my_vacation.html">My Vacation</a> 
 		<a href="my_artistic_self.html">My Artistic Self</a>
+		<a href="marketplace.html">Marketplace</a>
+		<a href="calculators.html">Calculators</a>
+
+
 		</nav>
 		
 		<br><br><br>
