--- a/my_artistic_self.html
+++ b/my_artistic_self.html
@@ -3,6 +3,9 @@
 <html>
 
 	<head>
+	
+		<!--linking javascript nav.js-->
+		<script src="script.js"></script>
 		
 		<!--metadata-->
 		<meta name="author" content="Tristan Geary">
@@ -104,17 +107,14 @@
 	
 	<main class="page-body">
 	
-	<h3>Quick Links</h3>
+	<nav id="main-nav"></nav>
+		<script>
+		const current_path = location.pathname;
+		setNav(current_path)
+		</script>
+
 	
-	<nav>
-		<a href="index.html">Tristan Geary</a> 
-		<a href="my_vacation.html">My Vacation</a> 
-		<a href="my_artistic_self.html" class="active">My Artistic Self</a>
-		<a href="marketplace.html">Marketplace</a>
-		<a href="calculators.html">Calculators</a>
-
-
-	</nav>
+	
 	
 	<br><br><br>
 	
