--- a/my_vacation.html
+++ b/my_vacation.html
@@ -2,7 +2,10 @@
 <html>
 
 	<head>
-	
+		
+		<!--linking javascript nav.js-->
+		<script src="script.js"></script>
+		
 		<title>My Vacation</title>
 	
 		<!-- metadata -->
@@ -23,19 +26,13 @@
 	
 	<main class="page-body">
 	
-	
-	<h3>Quick Links</h3>
-	
-	<nav>
-	
-		<a href="index.html">Tristan Geary</a> 
-		<a href="my_vacation.html" class="active">My Vacation</a> 
-		<a href="my_artistic_self.html">My Artistic Self</a>
-		<a href="marketplace.html">Marketplace</a>
-		<a href="calculators.html">Calculators</a>
+	<nav id="main-nav"></nav>
+	<script>
+	const current_path = location.pathname;
+	setNav(current_path)
+	</script>
 
-		
-	</nav>
+	
 	
 	<br><br><br>
 	<!-- header and info -->
