--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
 	
 		<!--linking javascript nav.js-->
-		<script src="nav.js" defer></script>
+		<script src="nav.js"></script>
 		
 			
 			
