updating other files to show nav

--- a/my_artistic_self.html
+++ b/my_artistic_self.html
@@ -5,7 +5,7 @@
 	<head>
 	
 		<!--linking javascript nav.js-->
-		<script src="script.js"></script>
+		<script src="nav.js"></script>
 		
 		<!--metadata-->
 		<meta name="author" content="Tristan Geary">
@@ -110,7 +110,7 @@
 	<nav id="main-nav"></nav>
 		<script>
 		const current_path = location.pathname;
-		setNav(current_path)
+		setNav(current_path);
 		</script>
 
 	
