--- a/marketplace.html
+++ b/marketplace.html
@@ -3,7 +3,7 @@
 <head>
 
 		<!--linking javascript nav.js-->
-		<script src="script.js"></script>
+		<script src="nav.js"></script>
 		
 		<!--metadata-->
 		<meta name="author" content="Tristan Geary">
