--- a/my_vacation.html
+++ b/my_vacation.html
@@ -4,7 +4,7 @@
 	<head>
 		
 		<!--linking javascript nav.js-->
-		<script src="script.js"></script>
+		<script src="nav.js"></script>
 		
 		<title>My Vacation</title>
 	
