--- a/marketplace.html
+++ b/marketplace.html
@@ -34,7 +34,7 @@
 	<nav id="main-nav"></nav>
 	<script>
 	const current_path = location.pathname;
-	setNav(current_path)
+	setNav(current_path);
 	</script>
 
 	
