committing my_form.hmtl

--- a/nav.html
+++ b/nav.html
@@ -2,4 +2,5 @@
 <a href="my_vacation.html">My Vacation</a> 
 <a href="my_artistic_self.html">My Artistic Self</a>
 <a href="marketplace.html">Marketplace</a>
+<a href="my_form.html">My Quiz</a>
 
