--- a/my_form.html
+++ b/my_form.html
@@ -99,7 +99,7 @@
 			
 		const study_option = document.querySelector('input[name="study"]:checked');
 		if(!study_option){
-			window.alert("Answer Question 1: How do you prefer to study?); 
+			window.alert("Answer Question 1: How do you prefer to study?"); 
 			return false; 
 		}
 		
