fixing error in checks

--- a/my_form.html
+++ b/my_form.html
@@ -116,13 +116,13 @@
 		}
 		
 		const deadline_option = document.querySelector('input[name="deadline"]:checked');
-		if(!time_option){
+		if(!deadline_option){
 			window.alert("Answer Question 4: How do you handle deadlines?");
 			return false; 
 		}
 		
 		const reward_option = document.querySelector('input[name="reward"]:checked');
-		if(!time_option){
+		if(!reward_option){
 			window.alert("Answer Question 5: How do you reward yourself after exams?");
 			return false; 
 		}
