fixing typos and adding footer to my_form.html

--- a/my_form.html
+++ b/my_form.html
@@ -12,7 +12,7 @@
 		<!--linking external css-->
 		<link rel="stylesheet" href="my_style.css">
 		
-		<title>Personlity Quiz</title>
+		<title>Student Quiz</title>
 		
 		<script src="nav.js" href="my_style.css"></script>
 </head>
@@ -30,7 +30,7 @@
 	
 	<form id="quiz-form" onsubmit="return validate(event)">
 		<fieldset>
-			<legend>Personality Quiz</legend>
+			<legend>Student Quiz</legend>
 			
 			<label for="name">Your Name:</label>
 			<br>
@@ -78,6 +78,10 @@
 			</fieldset>
 		</form>
 	</main>
+	
+	<footer class="site-footer">
+	<p>This is for my CS203 Lab.</p>
+	</footer>
 	
 	
 	<script>
