--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 		
 		<main class="page-body">
 		
-		
+		<!--calling the nav-->
 		<nav id="main-nav"></nav>
 		<script>
 			const current_path = location.pathname;
@@ -50,7 +50,7 @@
 		
 		<br><br><br>
 		
-		<!-- academic information as headers -->
+		
 		<div>
 		<h1><b>Tristan Geary: Undergraduate Student</b></h1>
 		
@@ -85,6 +85,7 @@
 		</ul>
 		
 		</div>
+		
 		<hr>
 		
 		
