--- a/my_vacation.html
+++ b/my_vacation.html
@@ -26,6 +26,7 @@
 	
 	<main class="page-body">
 	
+	<!--calling the nav-->
 	<nav id="main-nav"></nav>
 	<script>
 	const current_path = location.pathname;
@@ -35,8 +36,7 @@
 	
 	
 	<br><br><br>
-	<!-- header and info -->
-	
+	<!-- header-->
 	<div>
 	<h1>My Ideal Vacation</h1>
 	
