--- a/my_artistic_self.html
+++ b/my_artistic_self.html
@@ -107,6 +107,7 @@
 	
 	<main class="page-body">
 	
+	<!--calling the nav-->
 	<nav id="main-nav"></nav>
 		<script>
 		const current_path = location.pathname;
