Start lab7: add new files

--- a/my_site/nav.html
+++ b/my_site/nav.html
@@ -3,4 +3,5 @@
 <a href="my_artistic_self.html">My Artistic Self</a>
 <a href="marketplace.html">Marketplace</a>
 <a href="my_form.html">My Quiz</a>
+<a href="to-do.html">To-Do List</a>
 
