--- a/my_files/nav.html
+++ b/my_files/nav.html
@@ -1,4 +1,4 @@
-<a href="index.html">Tristan Geary</a> 
+<a href="index.php">Tristan Geary</a> 
 <a href="my_vacation.html">My Vacation</a> 
 <a href="my_artistic_self.html">My Artistic Self</a>
 <a href="marketplace.html">Marketplace</a>
